--- a/iphone2.6/FounderReader-2.5/Configs/left_presonMenu.plist
+++ b/iphone2.6/FounderReader-2.5/Configs/left_presonMenu.plist
@@ -4,63 +4,23 @@
 <array>
 	<dict>
 		<key>name</key>
-		<string>搜索</string>
+		<string>我的评价</string>
 		<key>image</key>
 		<string>icon_left_search</string>
 		<key>class</key>
-		<string>SearchPageController</string>
+		<string>MyCommentLIstController</string>
 		<key>icon</key>
-		<string>mine_search</string>
+		<string>my_comment</string>
 	</dict>
 	<dict>
 		<key>name</key>
-		<string>读报</string>
+		<string>我的收藏</string>
 		<key>image</key>
 		<string>icon_left_db</string>
 		<key>class</key>
-		<string>PeopleDailyPageController</string>
+		<string>FavoritePageController</string>
 		<key>icon</key>
-		<string>my_dubao</string>
-	</dict>
-	<dict>
-		<key>name</key>
-		<string>积分商城</string>
-		<key>image</key>
-		<string>icon_left_integral</string>
-		<key>class</key>
-		<string>CreditWebViewController</string>
-		<key>icon</key>
-		<string>my_shangcheng</string>
-	</dict>
-	<dict>
-		<key>name</key>
-		<string>微商城</string>
-		<key>image</key>
-		<string>icon_left_integral</string>
-		<key>class</key>
-		<string>TinyMallViewController</string>
-		<key>icon</key>
-		<string>my_shangchensmall</string>
-	</dict>
-	<dict>
-		<key>name</key>
-		<string>我的互动</string>
-		<key>image</key>
-		<string>icon_left_my_comment</string>
-		<key>class</key>
-		<string>MyInteractionController</string>
-		<key>icon</key>
-		<string>my_hudong</string>
-	</dict>
-	<dict>
-		<key>name</key>
-		<string>报料</string>
-		<key>image</key>
-		<string>icon_left_provide</string>
-		<key>class</key>
-		<string>DishViewController</string>
-		<key>icon</key>
-		<string>my_baoliao</string>
+		<string>my_collect</string>
 	</dict>
 	<dict>
 		<key>name</key>
@@ -71,26 +31,6 @@
 		<string>SetupPageController</string>
 		<key>icon</key>
 		<string>my_setting</string>
-	</dict>
-	<dict>
-		<key>name</key>
-		<string>扫一扫</string>
-		<key>image</key>
-		<string>icon_left_scan</string>
-		<key>class</key>
-		<string>FDScanViewController</string>
-		<key>icon</key>
-		<string>my_scan</string>
-	</dict>
-	<dict>
-		<key>name</key>
-		<string>我的提问</string>
-		<key>image</key>
-		<string>mine_AskQuestions</string>
-		<key>class</key>
-		<string>MyAnswerController</string>
-		<key>icon</key>
-		<string>my_ask</string>
 	</dict>
 </array>
 </plist>
